assets/base.css
@tailwind base;

@tailwind components;

@tailwind utilities;

html,
body {
  height: "100%";
}

.tooltip .tooltip-text {
  visibility: hidden;
  text-align: center;
  padding: 2px 6px;
  position: absolute;
  z-index: 100;
}
.tooltip:hover .tooltip-text {
  visibility: visible;
}

.disabled-text {
  background-color: #eeeeee;
}

.react-codemirror2 {
  width: 100%;
  margin-top: 0;
  height: 170px;
  overflow-y: scroll;
  position: relative;
  background-color: red;
}

.CodeMirror {
  position: absolute !important;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
}

